БинарноеДеревоПоиска 1. Поправил замечание. (Вынес код сравнения с 0 за пределы if'ов); 2. Учел в обходах случай пустого дерева; 3. Исправил ошибку в обходе в ширину(а может и не исправил :)); 4. Переделал обход в глубину через ArrayList; 5. В обходы передаю Consumer<T>.